# MNIST_GAN

./: Dockerfile  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
MNIST_GAN/data/: make_dataset.py
MNIST_GAN/training/: train.py
MNIST_GAN/utils/: visualization_utils.py
docs/: Makefile  conf.py  index.rst  make.bat
mnist_gan/: __init__.py  cli.py
mnist_gan/data/: make_dataset.py
mnist_gan/training/: models.py  train.py
mnist_gan/utils/: training_utils.py  visualization_utils.py
notebooks/: MNIST_DCGAN.ipynb  papermill_test.ipynb
