[tool.poetry]
name = "mnist_gan"
version = "0.1.0"
description = "package to run gan for mnist dataset"
authors = ["Bartosz Baranowski <bartekbaranow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.3.1"
numpy = "^1.18.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
