[tool.poetry]
name = "mnist_gan"
version = "0.1.3"
description = "package to run gan for mnist dataset"
authors = ["Bartosz Baranowski <bartekbaranow@gmail.com>"]

packages = [
    { include = "mnist_gan" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Analytics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Framework :: tox",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.scripts]
train_model = 'mnist_gan.cli:do_train'
generate_images = 'mnist_gan.cli:generate'

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.3.1"
numpy = "^1.18.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
